--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     ollama:
       base-url: http://172.31.192.165:11434
       chat:
-        model: qwen3:4b
+        model: cnshenyang/qwen3-nothink:14b
     # openai:
     #   base-url: https://api.deepseek.com
     #   api-key: ${DEEPSEEK}
